Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138230

QCheckBox used as editor in delegate does not display checkmark when using Windows11 style and no text

XMLWordPrintable

    • Windows
    • f08f2b4a9 (dev), ec0f2eac0 (6.10), b6b02a987 (6.9), 06f15f522 (tqtc/lts-6.8)

      When using QCheckBox as an editor widget in a delegate (e.g., QStyledItemDelegate::createEditor), the checkbox does not display its checkmark indicator when:

      • The active style isĀ windows11
      • The widget is visible, has non-zero geometry, and isChecked() returns true

      Under these conditions, the checkbox appears blank, even though it is present and functional.

      When switching to the Fusion style, the checkbox displays correctly.

        1. main.cpp
          2 kB
          Xun Yuan
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chehrlic Christian Ehrlicher
            yuanxun Xun Yuan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes